...
                top = 8.dp,
                bottom = 12.dp
            ),
        verticalAlignment = Alignment.CenterVertically
    ) {
        Text(
            text = "Your Library",
            color = Color.White,
            modifier = Modifier.weight(1f)
        )
        BaseButton(
            onClick = onSearchClick,
            modifier = Modifier.padding(0.dp,0.dp,12.dp,0.dp)
...
