...
                BaseButton(
                    onClick = { onEvent(ProfileEvent.OnViewMore) },
                    Modifier.size(36.dp).fillMaxWidth(),
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.more_ic),
                        contentDescription = "More options",
                        tint = Color.White,
                        modifier = Modifier.size(16.dp)
                    )
                }
            }
            Avatar(uiState.user)
...
