...
    onClick: (Music) -> Unit
) {
    Column(
        verticalArrangement = Arrangement.spacedBy(20.dp),
        modifier = Modifier.padding(vertical = 20.dp)
    ) {
        Text(text = "For You",color= Color.White)
        LazyRow(
            horizontalArrangement = Arrangement.spacedBy(12.dp),
        ) {
            items(items) { item ->
                MusicCard(item,onClick)
            }
...
